<resources>
    <string name="app_name">Gideon</string>
    <string name="gideon">Gideon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="signOut">Sign Out</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>
    <string name="add_camera">Add Camera</string>
    <string name="create_account">Create Account</string>
    <string name="description">Intelligent Video Analytics</string>
    <string name="username">Username</string>
    <string name="previous_video">Previous Video</string>
    <string name="next_video">Next Video</string>
    <string name="personal">Personal</string>
    <string name="alert_history">Alert History</string>
    <string name="camera">Camera</string>
    <string name="recent">Recent</string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="goto_previous_screen">Goto Previous Screen</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ip">IP</string>
    <string name="socket">Socket</string>
    <string name="remove_camera">Remove Camera</string>
    <string name="event_thumbnail">Event Thumbnail</string>
</resources>
