<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_camera"
    android:orientation="vertical"
    tools:context=".AddCameraScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textSize="28sp"
        android:layout_margin="20sp"
        android:fontFamily="@font/regular"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30sp"
        android:text="@string/ip"
        android:fontFamily="@font/regular"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/ipText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:backgroundTint="@color/colorWhite"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="30sp"
        android:text="@string/socket"
        android:fontFamily="@font/regular"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/addSocket"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:backgroundTint="@color/colorWhite"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/addCamera"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginTop="75sp"
        android:background="@drawable/button_corner"
        android:text="@string/add_camera"
        android:textSize="16sp"
        android:layout_gravity="end"
        android:layout_marginEnd="16sp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="50sp"
        android:text="@string/socket"
        android:fontFamily="@font/regular"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/removeSocket"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:backgroundTint="@color/colorWhite"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/removeCamera"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginTop="75sp"
        android:background="@drawable/button_corner"
        android:text="@string/remove_camera"
        android:textSize="16sp"
        android:layout_gravity="end"
        android:layout_marginEnd="16sp"
        android:fontFamily="@font/regular"
        android:textColor="@color/colorWhite"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_backarrow"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/goto_previous_screen"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25sp"/>

    </RelativeLayout>

</LinearLayout>