<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:orientation="vertical"
    android:background="@drawable/main">

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/regular"
        android:textColor="@color/colorGreen"/>

    <VideoView
        android:id="@+id/videoFeed"
        android:layout_width="match_parent"
        android:layout_height="240sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320sp"
            android:layout_marginTop="10sp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/event_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/regular"
                    android:layout_gravity="center_horizontal"
                    tools:ignore="RelativeOverlap" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/event_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10sp" />
            </RelativeLayout>

            <ListView
                android:id="@+id/recentClips"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100sp">

        <TextView
            android:id="@+id/signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="27sp"
            android:text="@string/signOut"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:background="#00000000"/>

    </LinearLayout>
</LinearLayout>